fix dependency stuff & disable ssl

--- a/deploy/gddo.conf
+++ b/deploy/gddo.conf
@@ -12,11 +12,11 @@ server {
 
 server {
     listen 80 default_server;
-    listen 443 ssl default_server;
+#    listen 443 ssl default_server;
 
-    ssl_certificate      /ssl/godoc_org.crt;
-    ssl_certificate_key  /ssl/godoc_org.key;
-    
+#    ssl_certificate      /ssl/godoc_org.crt;
+#    ssl_certificate_key  /ssl/godoc_org.key;
+
     server_name _ godoc.org api.godoc.org;
     access_log /var/log/nginx/gddo.log verbose;
 
@@ -30,7 +30,7 @@ server {
 
     location / {
         proxy_pass http://127.0.0.1:8080;
-        proxy_set_header    Host $http_host;                                                                                                                     
+        proxy_set_header    Host $http_host;
         proxy_set_header    X-Scheme $scheme;
         proxy_set_header    X-Real-IP $remote_addr;
     }
